# ratemyhuman

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  data.dvc  main.py  pyproject.toml  requirements.txt
.dvc/: config
docs/: .gitignore  concept_note.md  confusion_matrix.png.dvc  dev_phase_slider.html  development_phase.html  development_phase_updated.html  misclassified_samples.png.dvc  none_in_charts.txt  notebook_steps.txt  presentation.ipynb  process_flow.mmd  process_flow_activity_diagram.mmd  system_architecture.mmd  system_architecture_class_diagram.mmd
scripts/: list_symbols.py
src/ratemyhuman/: __init__.py  app.py  cli.py  explore.py  main.py  model.py  validate.py
tests/: conftest.py  test_app.py  test_cli.py  test_explore.py  test_main.py  test_model.py  test_validate.py
