[project]
name = "ratemyhuman"
version = "0.1.0"
description = "Facial valence detection from human face images"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Torda Balázs"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    "click>=8.1",
    "facenet-pytorch>=2.6.0",
    "gradio>=6.10.0",
    "gradio-client>=2.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.1",
    "pillow>=12.1.1",
    "scikit-learn>=1.6",
    "seaborn>=0.13.2",
    "torch==2.12.0.dev20260324+cu128",
    "torchvision==0.26.0.dev20260324+cu128",
    "transformers>=5.3.0",
]

[project.scripts]
ratemyhuman = "ratemyhuman.cli:main"

[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ratemyhuman"]

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"
# Overriding facenet-pytorch 2.6.0's strict pins (unmaintained; MTCNN works fine with newer deps)
override-dependencies = [
    "numpy>=2.1",
    "pillow>=12.1.1",
    "torch==2.12.0.dev20260324+cu128",
    "torchvision==0.26.0.dev20260324+cu128",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
markers = ["slow: marks tests that require GPU and model weights (deselect with '-m \"not slow\"')"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
