[project]
name = "ratemyhuman"
version = "1.0.0"
description = "Facial valence detection from human face images"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Torda Balázs"}]
requires-python = ">=3.13,<3.14"
dependencies = [
    "acidbase @ git+https://github.com/jurdabos/acidbase.git",
    "click>=8.1",
    "facenet-pytorch>=2.6.0",
    "gradio>=6.10.0",
    "gradio-client>=2.4.0",
    "idna>=3.15",
    "matplotlib>=3.10.8",
    "numpy>=2.1",
    # pillow >=12.2.0 patches CVE-2025-48379 (fixed 11.3.0) and CVE-2026-25990 (fixed 12.1.1);
    # the >=12.2.0 floor matches the ecosystem-wide bump and also clears CVE-2026-42311.
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.27",
    "scikit-learn>=1.6",
    "seaborn>=0.13.2",
    # Floating ranges on the cu128 nightly index instead of exact dev-wheel pins.
    # Exact pins like `torch==2.12.0.dev20260324+cu128` rot within ~weeks because
    # PyTorch rotates nightly wheels off the index, leaving `uv lock` / `uv sync`
    # unsatisfiable for anyone who has not yet fetched that exact wheel.
    # The CUDA build (cu128) is selected by `[tool.uv.sources]` routing to the
    # cu128 index below, so it does not need to appear in the requirement string.
    "starlette>=1.3.1",
    "torch>=2.12.0.dev,<2.13",
    "torchvision>=0.27.0.dev,<0.28",
    "transformers>=5.3.0",
    "urllib3>=2.7.0",
]

[project.scripts]
ratemyhuman = "ratemyhuman.cli:main"

[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required for the `acidbase @ git+https://...` direct reference in dependencies.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ratemyhuman"]

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"
# Overriding facenet-pytorch 2.6.0's strict pins (unmaintained; MTCNN works fine with newer deps).
# Keep these in lockstep with [project.dependencies] above.
override-dependencies = [
    "numpy>=2.1",
    "pillow>=12.2.0",
    "torch>=2.12.0.dev,<2.13",
    "torchvision>=0.27.0.dev,<0.28",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
markers = ["slow: marks tests that require GPU and model weights (deselect with '-m \"not slow\"')"]

[tool.coverage.report]
# Excluding standard script-entry guards: lines under `if __name__ == "__main__":`
# are only executed when a module is run directly (e.g. `python -m ratemyhuman.main`),
# which is out of scope for the unit-test suite.
exclude_also = [
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
